namespace Qbc.Workboard.Domain;

public enum Availability
{
    Available,
    Limited,
    Unavailable
}

